Fix report creation from report template for anonymous users & small css adjustement (#1712)
* Fix report creation from report template for anonymous users

* small adjustement for styling of usernames in comment

* lower margin-top for comment content

* Update en-us.all.json

* Update CHANGELOG.md

* fix torrent link button's styling getting messed up from

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1236,6 +1236,9 @@ html, body {
     max-height: 500px;
 }
 
+.comment-content :first-child {
+	margin-top: 8px;
+}
 .comment-content :last-child {
     margin-bottom: 2px;
 }
